@@ -1,5 +1,6 @@
 - New entries: Second Static Mouse Pointer (bnc#899610); Live CD
   Installer and Keyboard Settings (bnc#903242).
+- New entry: Network After an Update With YaST (bnc#895447)
 
 13.2.20141030:
 - Update translations.
